--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -2,3 +2,6 @@
 <resources>
   <color name="splashscreen_background">#FFFFFF</color>
 </resources>
+<resources>
+    <color name="white">#FFF</color>
+</resources>
